--- a/dotnetapp-prod/Dockerfile.arm32
+++ b/dotnetapp-prod/Dockerfile.arm32
@@ -11,6 +11,9 @@ RUN dotnet publish -c Release -o out
 
 # build runtime image
 FROM microsoft/dotnet:2.0.0-runtime-stretch-arm32v7
+#FROM frankfax/pi_netcore2.0_runtime
+
+
 WORKDIR /app
 COPY --from=build-env /app/out ./
-ENTRYPOINT ["dotnet", "dotnetapp.dll"]
+#ENTRYPOINT ["dotnet", "dotnetapp.dll"]
